# ts-reg

./: .gitignore  conda_reqs.txt  init.sh  pip_reqs.txt  start.sh
src/: gen_samples.py  test.py  to_onnx.py  train.py  ts.py
ts_infer/: Cargo.toml  build.rs  build.sh  index.html  run-server.sh
ts_infer/src/: lib.rs  ts.rs  web.rs
ts_infer/src/model/: mod.rs
