[package]
name = "ts_infer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
ndarray = ["burn/ndarray"]

[dependencies]
burn = { version = "0.11.0", features = ["ndarray"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.66"
ndarray = "0.15.6"
serde = "1.0.193"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"

[build-dependencies]
burn-import = "0.11.0"
